:memo: updated cmake recipe

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,7 @@ add_library(ANPR SHARED
 )
 
 add_executable(debug
-        main.cpp
+        tests/debug.cpp
 )
 
 target_link_libraries(ANPR PRIVATE ${LIB_DEPENDENCIES})
